WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
96788
Gesture events sent to wrong node when page is scrolled
https://bugs.webkit.org/show_bug.cgi?id=96788
Summary
Gesture events sent to wrong node when page is scrolled
Rick Byers
Reported
2012-09-14 07:48:09 PDT
In
bug 92281
, gesture events started being propagated to the DOM, just for the sake of chromium plugins. However the hit test that occurs here is happening on the wrong co-ordinate space, so if the page is scrolled, the wrong DOM element will be targeted.
Attachments
Patch
(4.79 KB, patch)
2012-09-14 08:13 PDT
,
Rick Byers
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Rick Byers
Comment 1
2012-09-14 08:00:21 PDT
In the new layout test I'm about to upload, we currently get the following output (only the unexpected GestureTapDown, and the synthetic mouse events are received): Plugin received event: GestureTapDown Plugin received event: MouseEnter Plugin received event: MouseMove Plugin received event: MouseDown Plugin received event: MouseUp Plugin received event: MouseWheel With the fix, we get this as expected: Plugin received event: GestureTap Plugin received event: MouseEnter Plugin received event: MouseMove Plugin received event: MouseDown Plugin received event: MouseUp Plugin received event: GestureScrollBegin Plugin received event: GestureScrollUpdate Plugin received event: MouseWheel Plugin received event: GestureScrollEnd
Rick Byers
Comment 2
2012-09-14 08:13:54 PDT
Created
attachment 164155
[details]
Patch
Rick Byers
Comment 3
2012-09-14 08:15:06 PDT
abarth@, since you reviewed the original change in
bug 92281
, do you want to review this one two?
WebKit Review Bot
Comment 4
2012-09-14 08:54:46 PDT
Comment on
attachment 164155
[details]
Patch Clearing flags on attachment: 164155 Committed
r128615
: <
http://trac.webkit.org/changeset/128615
>
WebKit Review Bot
Comment 5
2012-09-14 08:54:49 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug