Gesture events sent to wrong node when page is scrolled https://bugs.webkit.org/show_bug.cgi?id=96788

Patch by Rick Byers <rbyers@chromium.org> on 2012-09-14
Reviewed by Antonio Gomes.

Source/WebCore:

Adjust the co-ordinate space correctly when doing hit testing for
gesture events (as for all other event handling code here).

Test: platform/chromium/plugins/gesture-events-scrolled.html

* page/EventHandler.cpp:
(WebCore::EventHandler::handleGestureEvent):

LayoutTests:

Add layout test based on gesture-events.html which tests the case when
the document is scrolled (so that client co-ordinates don't equal page
co-ordinates).
* platform/chromium/plugins/gesture-events-scrolled-expected.txt: Added.
* platform/chromium/plugins/gesture-events-scrolled.html: Added.

Canonical link: https://commits.webkit.org/114701@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@128615 268f45cc-cd09-0410-ab3c-d52691b4dbfc